refactor: remove unused DTO, enhance stock filters, and add synchronization utility
- Removed `CreateWalletRequest` DTO as it is no longer in use.
- Enhanced stock filtering in `PricingService` to exclude game-locked stocks.
- Updated `StockSyncService` to map additional status types for delisting and improve logging for unknown ones.
- Introduced `ProjectionSyncLock` for thread-safe synchronization in scheduler tasks.